--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Trilha de CSS - DIO</title>
 </head>
 <body>
@@ -36,6 +37,7 @@
         </div>
       </div>
     </section>
+    
     <section id="transform-world">
       <p>TRANSFORME O MUNDO COM A GENTE</p>
     </section>
